syntax = "proto3";

import "events.proto";

option java_multiple_files = true;
option java_package = "is.yarr.queuegen.grpc.gen.events.rawcollection";

service RawCollection {
  rpc Create(RawCollectionCreateEvent) returns (CreateComponentResponse);
  rpc ChangeSequential(RawCollectionSequentialChangeEvent) returns (EmptyResponse);
  rpc ChangeSongs(RawCollectionSongsChangeEvent) returns (EmptyResponse);
}

message RawCollectionCreateEvent {}

message RawCollectionSequentialChangeEvent {
  ModifyEvent modify = 1;
  bool sequential = 2;
}

message RawCollectionSongsChangeEvent {
  ModifyEvent modify = 1;
  repeated string song_ids = 2;
}
